[tool.poetry]
name = "elara"
version = "0.1.0"
description = ""
authors = ["Shravan Asati <dev.shravan@protonmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
elara = "elara.main:app"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.6"
typer = "^0.15.2"
jsonschema = "^4.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
